<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>WEstoqueNovo</class>
 <widget class="QWidget" name="WEstoqueNovo">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>761</width>
    <height>510</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize">
   <size>
    <width>761</width>
    <height>0</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>761</width>
    <height>16777215</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="spacing">
    <number>17</number>
   </property>
   <property name="leftMargin">
    <number>13</number>
   </property>
   <property name="topMargin">
    <number>1</number>
   </property>
   <property name="rightMargin">
    <number>13</number>
   </property>
   <property name="bottomMargin">
    <number>188</number>
   </property>
   <item alignment="Qt::AlignLeft">
    <widget class="QSplitter" name="splitter">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>75</width>
       <height>35</height>
      </size>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="handleWidth">
      <number>0</number>
     </property>
     <widget class="QPushButton" name="pbVoltar">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>75</width>
        <height>35</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>75</width>
        <height>35</height>
       </size>
      </property>
      <property name="cursor">
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="shortcut">
       <string>Ctrl+B</string>
      </property>
     </widget>
    </widget>
   </item>
   <item alignment="Qt::AlignHCenter">
    <widget class="QSplitter" name="splitter_2">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>197</width>
       <height>29</height>
      </size>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="handleWidth">
      <number>0</number>
     </property>
     <widget class="QLabel" name="outTitulo">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>197</width>
        <height>29</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>197</width>
        <height>29</height>
       </size>
      </property>
      <property name="text">
       <string>Cadastrar Produto</string>
      </property>
     </widget>
    </widget>
   </item>
   <item alignment="Qt::AlignHCenter">
    <widget class="QSplitter" name="splitter_3">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>300</width>
       <height>77</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>300</width>
       <height>77</height>
      </size>
     </property>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="handleWidth">
      <number>5</number>
     </property>
     <widget class="QLabel" name="label">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>0</width>
        <height>19</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>16777215</width>
        <height>19</height>
       </size>
      </property>
      <property name="text">
       <string>Produto</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="inProduto">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>300</width>
        <height>29</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>300</width>
        <height>29</height>
       </size>
      </property>
      <property name="maxLength">
       <number>30</number>
      </property>
     </widget>
     <widget class="QLabel" name="errProduto">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>0</width>
        <height>19</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>16777215</width>
        <height>19</height>
       </size>
      </property>
      <property name="text">
       <string>Por favor, informe o produto.</string>
      </property>
      <property name="err" stdset="0">
       <bool>true</bool>
      </property>
     </widget>
    </widget>
   </item>
   <item alignment="Qt::AlignHCenter">
    <widget class="QSplitter" name="splitter_4">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>300</width>
       <height>77</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>300</width>
       <height>77</height>
      </size>
     </property>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="handleWidth">
      <number>5</number>
     </property>
     <widget class="QLabel" name="label_2">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>0</width>
        <height>19</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>16777215</width>
        <height>19</height>
       </size>
      </property>
      <property name="text">
       <string>Preço</string>
      </property>
     </widget>
     <widget class="QDoubleSpinBox" name="inPreco">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>300</width>
        <height>29</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>300</width>
        <height>29</height>
       </size>
      </property>
     </widget>
     <widget class="QLabel" name="errPreco">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>0</width>
        <height>19</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>16777215</width>
        <height>19</height>
       </size>
      </property>
      <property name="text">
       <string>Por favor, informe o preço.</string>
      </property>
      <property name="err" stdset="0">
       <bool>true</bool>
      </property>
     </widget>
    </widget>
   </item>
   <item alignment="Qt::AlignHCenter">
    <widget class="QSplitter" name="splitter_5">
     <property name="minimumSize">
      <size>
       <width>300</width>
       <height>35</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>300</width>
       <height>35</height>
      </size>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="handleWidth">
      <number>6</number>
     </property>
     <widget class="QPushButton" name="pbConfirmar">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>147</width>
        <height>35</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>147</width>
        <height>35</height>
       </size>
      </property>
      <property name="cursor">
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="shortcut">
       <string>Ctrl+O</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pbCancelar">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>147</width>
        <height>35</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>147</width>
        <height>35</height>
       </size>
      </property>
      <property name="cursor">
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="shortcut">
       <string>Ctrl+A</string>
      </property>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>inProduto</tabstop>
  <tabstop>inPreco</tabstop>
  <tabstop>pbConfirmar</tabstop>
  <tabstop>pbCancelar</tabstop>
  <tabstop>pbVoltar</tabstop>
 </tabstops>
 <resources/>
 <connections>
  <connection>
   <sender>pbVoltar</sender>
   <signal>clicked()</signal>
   <receiver>WEstoqueNovo</receiver>
   <slot>voltar()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>47</x>
     <y>11</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>149</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>inProduto</sender>
   <signal>editingFinished()</signal>
   <receiver>WEstoqueNovo</receiver>
   <slot>checarNome()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>106</x>
     <y>99</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>149</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>inPreco</sender>
   <signal>editingFinished()</signal>
   <receiver>WEstoqueNovo</receiver>
   <slot>checarPreco()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>374</x>
     <y>273</y>
    </hint>
    <hint type="destinationlabel">
     <x>375</x>
     <y>254</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>voltar()</slot>
  <slot>checarNome()</slot>
  <slot>checarPreco()</slot>
 </slots>
</ui>
